[package]
name = "fuzzy_psi"
version = "0.0.0-development"
edition = "2021"
description = "Implementation of the Fuzzy PSI via Oblivious Protocol Routing algorithm based on a paper of David Richardson et al."
authors = ["Christoph Bühler <christoph.buehler@unisg.ch>"]
license = "GPL-3.0"

[[bench]]
name = "okvs"
harness = false

[dependencies]
ark-ff = "0.5.0"
ark-poly = "0.5.0"
ark-test-curves = { version = "0.5.0", features = ["bls12_381_curve"] }
num-bigint = "0.4.6"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.9.0"
rand_chacha = "0.9.0"
